--- a/index.html
+++ b/index.html
@@ -26,17 +26,17 @@
     <h2>Temperature Converter</h2>
     <div class="converter-row">
       <div class="col">
-        <label>Fahrenheit</label>
+        <label>Fahrenheit: </label>
         <input type="number" id="fahrenheit">
       </div>
 
       <div class="col">
-        <label>Celsius</label>
+        <label>Celsius: </label>
         <input type="number" id="celsius">
       </div>
 
       <div class="col">
-        <label>Kelvin</label>
+        <label>Kelvin: </label>
         <input type="number" id="kelvin">
       </div>
     </div>
